<resources>
    <string name="app_name">shoptest</string>
    <string name="login_name_hint">登录名/Name</string>
    <string name="login_password_hint">密码/password</string>
    <string name="et_code_hint">验证码</string>
    <string name="txt_btn_longin">登陆</string>
    <string name="txt_tv_about">网络文化经营许可证：浙网文[2013]0268-027号</string>
    <string name="txt_tv_about2">浙公网安备 33010002000078号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_shopseacher">商品搜索</string>
    <string name="tab_sellersearch">商家搜索</string>
    <string name="tab_invoicingcount">进销统计</string>
    <string name="tab_sellerInfo">商家中心</string>
    <string name="shopcode">商品编号：</string>
    <string name="show">查看</string>
    <string name="shopinfo">商品信息</string>
    <string name="car_type">车型：</string>
    <string name="shop_total">库存：</string>
    <string name="star">品牌：</string>
    <string name="unit">单位：</string>
    <string name="clickrate">点击量：</string>
    <string name="update_time">更新时间：</string>
    <string name="hint_seach">输入商品的名称|品牌|车型</string>
    <string name="menu_select">筛选</string>
    <string name="priceRange">价格范围</string>
    <string name="stock">库存</string>
    <string name="unit2">件</string>
    <string name="brand">品牌</string>
    <string name="car_type2">车型</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
</resources>
