<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star"
    tools:context="com.qianwang.shoptest.activity.LoginActivity">

    <TextView
        android:id="@+id/im_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="65dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="logo"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/about1"
            android:textSize="8sp"
            android:textColor="#dddddd"
            android:text="@string/txt_tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/about2"
            android:textSize="8sp"
            android:textColor="#dddddd"
            android:text="@string/txt_tv_about2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/im_logo"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:background="@drawable/login_edtertext_nomal"
            android:drawableLeft="@drawable/icon_user"
            android:hint="@string/login_name_hint"
            android:drawablePadding="21dp"
            android:paddingLeft="21dp"
            android:textSize="20dp"/>

        <EditText
            android:drawablePadding="21dp"
            android:id="@+id/et_password"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_edtertext_nomal"
            android:hint="@string/login_password_hint"
            android:drawableLeft="@drawable/icon_password"
            android:paddingLeft="21dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <EditText
                android:paddingLeft="21dp"
                android:textSize="20sp"
                android:id="@+id/et_code"
                android:background="@drawable/login_edtertext_nomal"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:hint="@string/et_code_hint"/>

            <ImageView
                android:background="@drawable/login_edtertext_nomal"
                android:id="@+id/im_showcode"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:textColor="#ffffff"
            android:text="@string/txt_btn_longin"
            android:background="#81c5ea"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
</RelativeLayout>
