<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qianwang.shoptest.activity.MainActivity">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </FrameLayout>

    <!-- 设置为gone让他显示radioGroup-->
    <android.support.v4.app.FragmentTabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </android.support.v4.app.FragmentTabHost>

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        设置水波纹为控件内
        <RadioButton
            android:id="@+id/tab_shopseacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/tab_icon_selector"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/tab_shopseacher"
            android:textColor="@drawable/tab_txt_selector"/>

        <RadioButton
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/tab_sellersearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/tab_icon_selector"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/tab_sellersearch"
            android:textColor="@drawable/tab_txt_selector"/>

        <RadioButton
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/tab_invoicingcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/tab_icon_selector"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/tab_invoicingcount"
            android:textColor="@drawable/tab_txt_selector"/>

        <RadioButton
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/tab_sellerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/tab_icon_selector"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/tab_sellerInfo"
            android:textColor="@drawable/tab_txt_selector"/>
    </RadioGroup>
</LinearLayout>
